# vlbeats

./: .gitignore  Beatmap.cpp  Beatmap.h  CMakeLists.txt  CMakeLists_linux.txt  CMakeLists_old.txt  DiscordRPC.cpp  DiscordRPC.h  Game.cpp  Game.h  Note.h  README.md  Settings.cpp  Settings.h  Skins.cpp  Skins.h  Window.cpp  Window.h  app_icon.icns  build-linux.sh  build-win.sh  build.sh  constants.h  game  linux_deps.txt  main  main.cpp  tomake.txt  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
beatmaps/firstbeatmap/: map.txt  map_extreme.txt  map_hard.txt  map_medium.txt  metadata.txt
build-win/: CMakeCache.txt  Makefile  cmake_install.cmake
build-win/prod/: scores.db
build-win/prod/beatmaps/: badapple.lk
build-win/prod/skins/default/: metadata.txt
build_linux/: CMakeCache.txt  LKPacker  Lonkstalk  Makefile  scores.db
core/: Game.cpp  Game.h
gameplay/: Beatmap.cpp  Beatmap.h  Skins.cpp  Skins.h
gamestuff/: scores.db  settings.ini
utils/: Database.h  DiscordRPC.cpp  DiscordRPC.h  Settings.cpp  Settings.h
